Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35364

Tests fail on s390x due to little endian class UnsignedNByteInteger

    XMLWordPrintable

Details

    • Untriaged
    • Ubuntu 64-bit
    • Impediment
    • No
    • Critical

    Description

      The class UnsignedNByteInteger defined in <source_root>/couchbase/platform/include/platform/n_byte_integer.h

      is defined as little-endian only. This causes platform-n-byte-integer-test to fail as well as many others (possibly as many as 47)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby (Inactive)
            billo Bill O'Farrell
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 8h
                8h
                Remaining:
                Remaining Estimate - 8h
                8h
                Logged:
                Time Spent - Not Specified
                Not Specified

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty