MB-35364: make n-byte-integer work on big-endian hardware

Change-Id: I52b3d30897738397e6b2cba67eec47f8b94b3b83
Reviewed-on: http://review.couchbase.org/113775
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>